# lab

./: .gitignore  .m4.env  .mcp.json  .mypy.ini  .rubocop.json  .rubocop.yml  Gemfile  Makefile  README.md  aws.sh  del.sh  docker-compose.yml  exec.sh  helm.sh  htpasswd.py  k8s  kompose.sh  kubectl.sh  kustomize.sh  main.sh  main.tf  mypy.ini  package.json  pyproject.toml  s3.sh  self.sh  tofu.sh  tsconfig.json  variables.tf  versions.tf  win.sh  wsync.sh
.codex/: config.toml  config.tpl.toml
.facts/: droplet.json  esxi.json  freenas.json  nuc.json  opnsense.json  orthanc.json  pfsense.json  v2.json
archive/: drop.ps1  firefox.ps1  rclone.ps1  telus-ia-pd.py  tv.ps1
cloud-init/: user-data.yml
doc/: DESIGN.md  DX.md  NETWORK.md  PRIVATE_CLOUD.md  README.md
docker/: ubuntu.Dockerfile
facts/: droplet.json  droplet.k8s.json  droplet.var  esxi.json  esxi.var  freenas.json  freenas.var  nuc.json  nuc.k8s.json  opnsense.json  orthanc.json  pfsense.json  pfsense.var  roku.json  tower.json  v2.json
images/: nt.Dockerfile
k8s/: helm-charts.sh  keel.helm.json  keel.json  networkpolicy.k8s.yml  nvidia-device-plugin.helm.json  reloader.helm.json  sablier.k8s.yml
libexec/: aws.sh  cgi.sh  charts.sh  cp.sh  decrypt.sh  encrypt.sh  erb.rb  essentials.sh  facts.sh  gh-latest.sh  gnupg.sh  helm-charts.sh  helm.sh  inventory.jq  inventory.sh  kompose.sh  kubectl.sh  m4.sh  m5.sh  nproc.sh  s3.sh  systemd-fmt.sh  uuidgen.py  wsync.sh  yq.sh
makelib/: build.mk  cgi.sh  ci.mk  crypt.mk  dev.mk  example.mk  facts.mk  fmt.mk  init.mk  k8s.mk  lint.mk  local.mk  state.mk  (+2 more)
(+2457 files in other folders)
