[project]
name    = "lab"
version = "0"

dependencies = [
  "s3cmd@https://github.com/s3tools/s3cmd/archive/heads/master.tar.gz",
  "aws-lambda-powertools",
  "elasticsearch",
  "opentelemetry-instrumentation-aws-lambda",
  "opentelemetry-sdk",
  "twilio",
]

[project.optional-dependencies]
dev = ["mypy", "types-PyYAML", "black", "isort"]
