[project]
name    = "lab"
version = "0"

dependencies = [
  "aws-lambda-powertools",
  "elasticsearch",
  "mcp-grafana",
  "opentelemetry-exporter-otlp-proto-http",
  "opentelemetry-instrumentation-aws-lambda",
  "opentelemetry-instrumentation-botocore",
  "opentelemetry-instrumentation-requests",
  "opentelemetry-sdk",
  "s3cmd@https://github.com/s3tools/s3cmd/archive/heads/master.tar.gz",
  "twilio",
]

[project.optional-dependencies]
dev = ["mypy", "types-PyYAML", "types-requests", "black", "isort"]
